configuring start script

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "* Write a script that reads `movie_titles.csv`, parses it and populates   a MongoDB database. * Write a server endpoint that returns movies   * `?q=` The endpoint should be queryable by title   * `?min=` The endpoint should be queryable by min-year   * `?max=` The endpoint should be queryable by max-year   * `?count=` The endpoint should return results 100 at time   * `?page=` The endpoint should support pagination",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js"
   },
   "keywords": [],
   "author": "",
