--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "dotenv": "^5.0.1",
+    "express": "^4.16.3",
     "mongoose": "^5.1.2",
     "parcel-bundler": "^1.8.1"
   },
