--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "dotenv": "^5.0.1",
     "express": "^4.16.3",
     "mongoose": "^5.1.2",
-    "parcel-bundler": "^1.8.1"
+    "parcel-bundler": "^1.8.1",
+    "react": "^16.4.0",
+    "react-dom": "^16.4.0"
   },
   "devDependencies": {
     "eslint": "^4.19.1",
