--- a/lab-ryan/package.json
+++ b/lab-ryan/package.json
@@ -12,6 +12,7 @@
     "dotenv": "^5.0.1",
     "express": "^4.16.3",
     "mongoose": "^5.1.3",
+    "parcel-bundler": "^1.8.1",
     "react": "^16.4.0",
     "react-dom": "^16.4.0"
   }
