--- a/lab-ryan/package.json
+++ b/lab-ryan/package.json
@@ -16,6 +16,7 @@
     "babel-preset-stage-0": "^6.24.1",
     "dotenv": "^5.0.1",
     "express": "^4.16.3",
+    "fs": "0.0.1-security",
     "mongoose": "^5.1.3",
     "parcel-bundler": "^1.8.1",
     "react": "^16.4.0",
