--- a/lab-ryan/package.json
+++ b/lab-ryan/package.json
@@ -15,6 +15,8 @@
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "dotenv": "^5.0.1",
+    "eslint": "^4.19.1",
+    "eslint-plugin-react": "^7.8.2",
     "express": "^4.16.3",
     "fs": "0.0.1-security",
     "mongoose": "^5.1.3",
