--- a/lab-ryan/.babelrc
+++ b/lab-ryan/.babelrc
@@ -1,4 +1,3 @@
 {
-  presets: ['env', 'react', 'stage-0'],
-  plugins: ['transform-class-properties', 'autobind-class-methods']
+  "presets": ["env", "react", "stage-0"]
 }
