--- a/lab-ryan/package.json
+++ b/lab-ryan/package.json
@@ -9,11 +9,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.4",
     "babel-plugin-autobind-class-methods": "^5.0.1",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
+    "cors": "^2.8.4",
     "dotenv": "^5.0.1",
     "eslint": "^4.19.1",
     "eslint-plugin-react": "^7.8.2",
@@ -22,6 +25,9 @@
     "mongoose": "^5.1.3",
     "parcel-bundler": "^1.8.1",
     "react": "^16.4.0",
-    "react-dom": "^16.4.0"
+    "react-dom": "^16.4.0",
+    "webpack": "^4.10.2",
+    "webpack-cli": "^3.0.1",
+    "webpack-dev-server": "^3.1.4"
   }
 }
