--- a/lab-ryan/.env
+++ b/lab-ryan/.env
@@ -1,2 +1,2 @@
 PORT=3000
-MONGODB_URI=mongodb://localhost/lab42-full-stack-web-application
+MONGODB_URI=mongodb://localhost:27017/lab42-full-stack-web-application
