--- a/lab-ryan/package.json
+++ b/lab-ryan/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "build": "webpack --mode production",
+    "hot": "webpack-dev-server --inline --hot --history-api-fallback"
   },
   "author": "",
   "license": "ISC",
@@ -18,10 +20,9 @@
     "babel-preset-stage-0": "^6.24.1",
     "cors": "^2.8.4",
     "dotenv": "^5.0.1",
-    "eslint": "^4.19.1",
-    "eslint-plugin-react": "^7.8.2",
     "express": "^4.16.3",
     "fs": "0.0.1-security",
+    "html-webpack-plugin": "^3.2.0",
     "mongoose": "^5.1.3",
     "parcel-bundler": "^1.8.1",
     "react": "^16.4.0",
@@ -29,5 +30,9 @@
     "webpack": "^4.10.2",
     "webpack-cli": "^3.0.1",
     "webpack-dev-server": "^3.1.4"
+  },
+  "devDependencies": {
+    "eslint": "^4.19.1",
+    "eslint-plugin-react": "^7.9.0"
   }
 }
